--- a/tekton-pipelines/base/tasks/argocd-deploy-task.yaml
+++ b/tekton-pipelines/base/tasks/argocd-deploy-task.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: argocd-deploy-kaniko
+  name: argocd-deploy
 spec:
   params:
     - name: argocd_application_name
