--- a/tekton-pipelines/base/tasks/kustomize-task.yaml
+++ b/tekton-pipelines/base/tasks/kustomize-task.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: kustomize-kaniko
+  name: kustomize
 spec:
   description: >-
     Updates image tag in the kustomize overlay of the app
