--- a/tekton-pipelines/base/tasks/slack-notification-task.yaml
+++ b/tekton-pipelines/base/tasks/slack-notification-task.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:     
-  name: slack-notification-kaniko
+  name: slack-notification
 spec:
   description: >-
     Send slack notification with various information about pipeline progress/result.
