--- a/tekton-pipelines/base/tasks/argocd-deploy-task.yaml
+++ b/tekton-pipelines/base/tasks/argocd-deploy-task.yaml
@@ -7,6 +7,7 @@ spec:
     - name: argocd_application_name
     - name: argocd_version
       default: v2.0.1
+    - name: environment
 
   stepTemplate:
     envFrom:
