--- a/tekton-pipelines/base/tasks/kustomize-task.yaml
+++ b/tekton-pipelines/base/tasks/kustomize-task.yaml
@@ -27,26 +27,31 @@ spec:
           name: $(params.application)-build-pipeline-config # project specific values
 
   steps:
-    - name: prepare
-      image: alpine/git
-      script: |
-        git config --global user.email "$DEVOPS_GROUP_EMAIL"
-        git config --global user.name "tekton-kustomize"
-
     - name: update
       image: k8s.gcr.io/kustomize/kustomize:v3.8.7
       script: |
-        cd $(inputs.resources.kubernetes-repo.path)/$(params.kustomize_overlay_path)/$(params.environment) && /app/kustomize edit set image $(params.application)=$(params.image)
+        # inside our k8s deployment manifest we should set the image as the name of the component, without the environment suffix,
+        # for example: vh-backend, fbmm-backend
+        container_image=$(params.application)
+        environment=$(params.environment)
+        # https://www.gnu.org/software/bash/manual/html_node/Shell-Parameter-Expansion.html
+        container_image=${container_image%"-$environment"}
+        
+        cd $(inputs.resources.kubernetes-repo.path)/$(params.kustomize_overlay_path)/$(params.environment) && /app/kustomize edit set image $container_image=$(params.image)
         cat $(inputs.resources.kubernetes-repo.path)/$(params.kustomize_overlay_path)/$(params.environment)/kustomization.yaml
     
     - name: push
       image: alpine/git
       script: |
+        git config --global user.email "$DEVOPS_GROUP_EMAIL"
+        git config --global user.name "tekton-kustomize"
+
         cd $(inputs.resources.kubernetes-repo.path)
         # the params.branch comes from github push event and looks like this: "refs/heads/staging"
         # so we had to get only the end of the string
         branch=`echo $(params.branch)| awk -F\/ '$0=$3'`
         # git checkout $branch
+      
         git commit -am "kubernetes modification for $(params.kustomize_overlay_path)/$(params.environment) new image: $(params.image)"
         mkdir /root/.ssh && cp -r $HOME/.ssh/* /root/.ssh
         # git push
