--- a/tekton-pipelines/buildpacks/build-pipeline.yaml
+++ b/tekton-pipelines/buildpacks/build-pipeline.yaml
@@ -24,6 +24,7 @@ spec:
     - name: docker_registry
     - name: docker_registry_repository
     - name: environment
+    - name: cloud_cli
     - name: source_subpath
 
   workspaces:
@@ -59,6 +60,8 @@ spec:
           value: $(params.application)-buildpacks-cache
         - name: environment
           value: "$(params.environment)"
+        - name: cloud_cli
+          value: "$(params.cloud_cli)"
         - name: source_subpath
           value: "$(params.source_subpath)"
       workspaces:
