--- a/tekton-pipelines/base/tasks/kustomize-task.yaml
+++ b/tekton-pipelines/base/tasks/kustomize-task.yaml
@@ -13,12 +13,15 @@ spec:
 
   params:
     - name: application
+    - name: project
     - name: branch
       description: git branch
     - name: image
       description: New image for the application
     - name: kustomize_overlay_path
       description: Overlay path for kustomize call
+    - name: kubernetes_branch
+      default: "main"
     - name: environment
   
   stepTemplate:
@@ -27,32 +30,29 @@ spec:
           name: $(params.application)-build-pipeline-config # project specific values
 
   steps:
-    - name: update
-      image: k8s.gcr.io/kustomize/kustomize:v3.8.7
-      script: |
-        # inside our k8s deployment manifest we should set the image as the name of the component, without the environment suffix,
-        # for example: vh-backend, fbmm-backend
-        container_image=$(params.application)
-        environment=$(params.environment)
-        # https://www.gnu.org/software/bash/manual/html_node/Shell-Parameter-Expansion.html
-        container_image=${container_image%"-$environment"}
-        
-        cd $(inputs.resources.kubernetes-repo.path)/$(params.kustomize_overlay_path)/$(params.environment) && /app/kustomize edit set image $container_image=$(params.image)
-        cat $(inputs.resources.kubernetes-repo.path)/$(params.kustomize_overlay_path)/$(params.environment)/kustomization.yaml
-    
-    - name: push
+    - name: prepare
       image: alpine/git
       script: |
         git config --global user.email "$DEVOPS_GROUP_EMAIL"
         git config --global user.name "tekton-kustomize"
 
+    - name: update
+      image: k8s.gcr.io/kustomize/kustomize:v3.8.7
+      script: |
+        app=$(params.application)
+        env=$(params.environment)
+        application=${app%-$env}
+        cd $(inputs.resources.kubernetes-repo.path)/$(params.kustomize_overlay_path) && /app/kustomize edit set image $application=$(params.image)
+    
+    - name: push
+      image: alpine/git
+      script: |
         cd $(inputs.resources.kubernetes-repo.path)
         # the params.branch comes from github push event and looks like this: "refs/heads/staging"
         # so we had to get only the end of the string
-        branch=`echo $(params.branch)| awk -F\/ '$0=$3'`
+        # branch=`echo $(params.branch)| awk -F\/ '$0=$3'`
         # git checkout $branch
-      
-        git commit -am "kubernetes modification for $(params.kustomize_overlay_path)/$(params.environment) new image: $(params.image)"
+        git commit -am "feat: $(params.environment) argocd deployment $(params.kustomize_overlay_path), new image: $(params.image)"
         mkdir /root/.ssh && cp -r $HOME/.ssh/* /root/.ssh
         # git push
-        git push origin HEAD:$branch
+        git push origin HEAD:$(params.kubernetes_branch)
