--- a/tekton-pipelines/buildpacks-frontend/kustomization.yaml
+++ b/tekton-pipelines/buildpacks-frontend/kustomization.yaml
@@ -7,9 +7,10 @@ namespace: ci
 # Kustomize will add the namespace and labels to all files being kustomized
 #
 commonLabels:
-  pipeline: buildpack
+  pipeline: buildpack-frontend
   deploy: argocd
 
 resources:
+  - tasks/build.yaml
   - triggers/build-pipeline-trigger.yaml
   - build-pipeline.yaml
