--- a/tekton-pipelines/base/tasks/argocd-deploy-task.yaml
+++ b/tekton-pipelines/base/tasks/argocd-deploy-task.yaml
@@ -4,7 +4,7 @@ metadata:
   name: argocd-deploy
 spec:
   params:
-    - name: argocd_application_name
+    - name: application
     - name: argocd_version
       default: v2.0.1
     - name: environment
@@ -12,9 +12,9 @@ spec:
   stepTemplate:
     envFrom:
       - configMapRef:
-          name: $(params.argocd_application_name)-build-pipeline-config # project specific values
+          name: $(params.application)-build-pipeline-config # project specific values
       - secretRef:
-          name: $(params.argocd_application_name)-argocd-secret  # used for authentication (username/password or auth token)
+          name: $(params.application)-argocd-secret  # used for authentication (username/password or auth token)
   steps:
     - name: deploy
       image: argoproj/argocd:$(params.argocd_version)
@@ -26,19 +26,19 @@ spec:
           --username $ARGOCD_USERNAME \
           --password $ARGOCD_PASSWORD
 
-        argocd app sync $(params.argocd_application_name) \
+        argocd app sync $(params.application) \
           --grpc-web \
           --grpc-web-root-path $ARGOCD_ROOT_PATH \
           --server $ARGOCD_SERVER
         
-        argocd app wait $(params.argocd_application_name) \
+        argocd app wait $(params.application) \
           --health \
           --grpc-web \
           --grpc-web-root-path $ARGOCD_ROOT_PATH \
           --server $ARGOCD_SERVER
 
         # jq is not available in this image
-        # synced=`argocd app get $(params.argocd_application_name) -o json | jq .status.sync.status | tr -d \"`
-        # synced=`argocd app get $(params.argocd_application_name) | grep "Sync Status" | awk '{print $3}'`
-        healthy=`argocd app get $(params.argocd_application_name) | grep "Health Status:" | awk '{print $3}'`
+        # synced=`argocd app get $(params.application) -o json | jq .status.sync.status | tr -d \"`
+        # synced=`argocd app get $(params.application) | grep "Sync Status" | awk '{print $3}'`
+        healthy=`argocd app get $(params.application) | grep "Health Status:" | awk '{print $3}'`
         [[ "$healthy" == "Healthy" ]] && echo "Sync completed succcessfully" || (echo "Failed" && exit 1)
