--- a/tekton-pipelines/buildpacks/triggers/build-pipeline-trigger.yaml
+++ b/tekton-pipelines/buildpacks/triggers/build-pipeline-trigger.yaml
@@ -8,6 +8,7 @@ metadata:
 spec:
   params:
     - name: application
+    - name: project
     - name: sha
     - name: head_commit
     - name: head_commit_message
@@ -25,6 +26,9 @@ spec:
     - name: buildpack_runner_image
     - name: source_subpath
       default: ""
+    - name: kubernetes_repository_ssh_url
+    - name: kubernetes_repository_kustomize_path
+    - name: kubernetes_branch
 
   resourcetemplates:
   - kind: PipelineRun
@@ -41,6 +45,8 @@ spec:
       params:
         - name: "application"
           value: "$(tt.params.application)"
+        - name: "project"
+          value: "$(tt.params.project)"
         - name: sha
           value: "$(tt.params.sha)"
         - name: head_commit
@@ -73,6 +79,11 @@ spec:
           value: "$(tt.params.buildpack_runner_image)"
         - name: source_subpath
           value: "$(tt.params.source_subpath)"
+        - name: kubernetes_repository_kustomize_path    
+          value: "$(tt.params.kubernetes_repository_kustomize_path)"
+        - name: kubernetes_branch    
+          value: "$(tt.params.kubernetes_branch)"
+        
 
       resources:
         - name: app
@@ -83,6 +94,14 @@ spec:
                 value: $(tt.params.repository_ssh_url)
               - name: revision
                 value: $(tt.params.head_commit)
+        - name: kubernetes-repo
+          resourceSpec:
+            type: git
+            params:
+              - name: url
+                value: $(tt.params.kubernetes_repository_ssh_url)
+              - name: revision
+                value: $(tt.params.kubernetes_branch)
         - name: image
           resourceSpec:
             type: image
