--- a/tekton-pipelines/kaniko/triggers/build-pipeline-trigger.yaml
+++ b/tekton-pipelines/kaniko/triggers/build-pipeline-trigger.yaml
@@ -110,5 +110,18 @@ spec:
         persistentVolumeClaim:
           claimName: $(tt.params.application)-workspace-pvc
       podTemplate:
+        volumes:
+        - name: $(tt.params.application)-buildpacks-cache
+          persistentVolumeClaim:
+            claimName: $(tt.params.application)-buildpacks-cache-pvc
+        - name: podinfo
+          downwardAPI:
+            items:
+              - path: "labels"
+                fieldRef:
+                  fieldPath: metadata.labels
+              - path: "annotations"
+                fieldRef:
+                  fieldPath: metadata.annotations
         nodeSelector:
           ci: "true"
