feat: update tasks for azure

--- a/tekton-pipelines/base/tasks/buildpack-task.yaml
+++ b/tekton-pipelines/base/tasks/buildpack-task.yaml
@@ -97,7 +97,7 @@ spec:
         # python related
         # we should have a requirements.txt file in the build folder for our buildpack to work correctly
         # as a result we just copy it.
-        if [ -f $APPmanage.py ]; then
+        if [ -f $APP/manage.py ]; then
           case $(params.environment) in
 
             dev|develop|development)
@@ -161,7 +161,7 @@ spec:
       script: |
         #!/bin/bash
 
-        aws ecr get-login-password --region $AWS_REGION | docker login -u AWS --password-stdin $(params.docker_registry)
+        docker login $(params.docker_registry) --username "$AZURE_SP_APP_ID" --password "$AZURE_SP_PASSWORD"
 
         # build image utilizing backpack
         /cnb/lifecycle/creator \
@@ -180,6 +180,17 @@ spec:
           -run-image=$(params.run_image) \
           $(resources.outputs.image.url)
 
+      env:
+        - name: AZURE_SP_APP_ID
+          valueFrom:
+            secretKeyRef:
+              name: aks-pod-sp-secret
+              key: app-id
+        - name: AZURE_SP_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: aks-pod-sp-secret
+              key: password
       volumeMounts:
         - name: layers-dir
           mountPath: /layers
