feat: CR improvements

--- a/tekton-pipelines/base/tasks/slack-notification-task.yaml
+++ b/tekton-pipelines/base/tasks/slack-notification-task.yaml
@@ -64,25 +64,26 @@ spec:
 
         argo_app_url="$ARGOCD_SERVER/$ARGOCD_ROOT_PATH/applications/$(params.application)"
         argo_app_url=$(echo $argo_app_url | sed 's/\/\//\//g')
-        argo_app_url="https://argo_app_url"
-
-        branch=$(echo $(params.branch) | sed -r 's/\brefs\/\bheads\///g')
+        argo_app_url="https://$argo_app_url"
 
         slack-notifier \
         -user_name "Tekton" \
         -icon_emoji ":white_check_mark:" \
         -color "$color" \
-        -author_name "$(params.pusher_name)" \
+        -author_name "[$(params.application)] by $(params.pusher_name)" \
         -author_link "$(params.pusher_url)" \
         -title "$(params.head_commit_message)" \
         -text "$text_status" \
         -thumb_url "$thumb_url" \
         -field1_title "Open Application" \
-        -field1_value "$(params.environment): <$APPLICATION_URL|$APPLICATION_URL>" \
+        -field1_value "<$APPLICATION_URL|$APPLICATION_URL>" \
         -field1_short false \
-        -field2_title "Branch:Rev" \
-        -field2_value "<$(params.repository_url)/commit/$(params.sha)|$branch:$commit>" \
-        -field2_short false \
-        -field3_title "Manage" \
-        -field3_value "<$(params.repository_url)|Github Repository> | <$(params.repository_url)/issues|Github Issues> | <$JIRA_PROJECT_URL|Jira> | <$TEKTON_URL/$pipelinerun_name|CI> | <$argo_app_url|CD> " \
-        -field3_short false
+        -field2_title "Branch" \
+        -field2_value "$(echo $(params.branch) | sed -r 's/\brefs\/\bheads\///g')" \
+        -field2_short true \
+        -field3_title "Revision" \
+        -field3_value "<$(params.repository_url)/commit/$(params.sha)|$(params.sha)>" \
+        -field3_short true \
+        -field4_title "Manage" \
+        -field4_value "<$(params.repository_url)|Github Repository> | <$(params.repository_url)/issues|Github Issues> | <$JIRA_PROJECT_URL|Jira> | <$TEKTON_URL/$pipelinerun_name|CI> | <$argo_app_url|CD> " \
+        -field4_short false
