--- a/tekton-pipelines/buildpacks-frontend/tasks/build.yaml
+++ b/tekton-pipelines/buildpacks-frontend/tasks/build.yaml
@@ -92,8 +92,8 @@ spec:
       script: |
         #!/bin/bash
         # nodejs related
-        if [ -f app/package.json ]; then
-          cd app
+        if [ -f $(resources.inputs.app.path)/package.json ]; then
+          cd $(resources.inputs.app.path)
           yes | npm install --silent
           npm run build:$(params.environment) || echo "unable to build $(params.environment)"
           cp -rf {project.toml,nginx.conf,buildpack.yml,nginx.d,.nginx.d,nginx.*} $(params.source_subpath) 2>/dev/null
@@ -117,8 +117,8 @@ spec:
 
         # build image utilizing backpack
         /cnb/lifecycle/creator \
-          -app=app/$(params.source_subpath) \
-          -project-metadata=/workspace/app/project.toml \
+          -app=$(resources.inputs.app.path)/$(params.source_subpath) \
+          -project-metadata=$(resources.inputs.app.path)/project.toml \
           -cache-dir=/cache \
           -layers=/layers \
           -platform=/platform \
