feat: add params types to buildpack-build-pipeline

--- a/tekton-pipelines/buildpacks/build-pipeline.yaml
+++ b/tekton-pipelines/buildpacks/build-pipeline.yaml
@@ -9,28 +9,48 @@ spec:
 
   params:
     - name: application
+      type: string
     - name: project
+      type: string
       default: "" # set to empty default to accomodate currently running triggers
     - name: sha
+      type: string
     - name: head_commit
+      type: string
     - name: head_commit_message
+      type: string
     - name: pusher_name
+      type: string
     - name: pusher_email
+      type: string
     - name: pusher_avatar
+      type: string
     - name: pusher_url
+      type: string
     - name: repository_url
+      type: string
     - name: repository_ssh_url
+      type: string
     - name: branch
+      type: string
     - name: buildpack_builder_image
+      type: string
     - name: buildpack_runner_image
+      type: string
     - name: docker_registry
+      type: string
     - name: docker_registry_repository
+      type: string
     - name: environment
+      type: string
     - name: source_subpath
+      type: string
       default: ""
     - name: kubernetes_repository_kustomize_path
+      type: string
       default: ".kubernetes/manifests/dev"
     - name: kubernetes_branch
+      type: string
       default: main
 
   workspaces:
