--- a/tekton-pipelines/base/tasks/slack-notification-task.yaml
+++ b/tekton-pipelines/base/tasks/slack-notification-task.yaml
@@ -9,6 +9,7 @@ spec:
 
   params:
     - name: application
+    - name: sha
     - name: head_commit
     - name: head_commit_message
     - name: pusher_name
@@ -48,6 +49,7 @@ spec:
         # podinfo is mounted in TriggerTemplate
         pipelinerun_name=$(awk -F= '/tekton.dev\/pipelineRun/ {gsub(/"/, "", $2);print $2}' /etc/podinfo/labels)
         status="`echo $(params.status) | tr '[:upper:]' '[:lower:]'`"
+
         echo "result: $status"
 
         if [ "$status" = "succeeded" ]; then
@@ -63,32 +65,26 @@ spec:
 
         argo_app_url="$ARGOCD_SERVER/$ARGOCD_ROOT_PATH/applications/$(params.application)"
         argo_app_url=$(echo $argo_app_url | sed 's/\/\//\//g')
-        argo_app_url="https://argo_app_url"
+        argo_app_url="https://$argo_app_url"
 
         slack-notifier \
         -user_name "Tekton" \
         -icon_emoji ":white_check_mark:" \
         -color "$color" \
-        -author_name "$(params.pusher_name)" \
+        -author_name "[$(params.application)] by $(params.pusher_name)" \
         -author_link "$(params.pusher_url)" \
         -title "$(params.head_commit_message)" \
         -text "$text_status" \
         -thumb_url "$thumb_url" \
         -field1_title "Open Application" \
-        -field1_value "<$APPLICATION_URL|$(params.application)>" \
-        -field1_short true \
-        -field2_title "Environment" \
-        -field2_value "$(params.environment)" \
+        -field1_value "<$APPLICATION_URL|$APPLICATION_URL>" \
+        -field1_short false \
+        -field2_title "Branch" \
+        -field2_value "$(echo $(params.branch) | sed -r 's/\brefs\/\bheads\///g')" \
         -field2_short true \
-        -field3_title "Branch:Rev" \
-        -field3_value "$(params.branch):$(params.head_commit)" \
-        -field3_short false \
+        -field3_title "Revision" \
+        -field3_value "<$(params.repository_url)/commit/$(params.sha)|$(params.sha)>" \
+        -field3_short true \
         -field4_title "Manage" \
-        -field4_value "<$(params.repository_url)|Github Repository> | <$(params.repository_url)/issues|Github Issues> | <$JIRA_PROJECT_URL|Jira>" \
-        -field4_short false \
-        -field5_title "CI" \
-        -field5_value "$TEKTON_URL/$pipelinerun_name" \
-        -field5_short false \
-        -field6_title "CD" \
-        -field6_value "<$argo_app_url|Manage app in argocd>" \
-        -field6_short false
+        -field4_value "<$(params.repository_url)|Github> | <$(params.repository_url)/issues|Issues> | <$JIRA_PROJECT_URL|Jira> | <$TEKTON_URL/$pipelinerun_name|CI> | <$argo_app_url|CD> " \
+        -field4_short false
