--- a/tekton-pipelines/base/tasks/buildpack-task.yaml
+++ b/tekton-pipelines/base/tasks/buildpack-task.yaml
@@ -97,7 +97,7 @@ spec:
         # python related
         # we should have a requirements.txt file in the build folder for our buildpack to work correctly
         # as a result we just copy it.
-        if [ -f $APPmanage.py ]; then
+        if [ -f $APP/manage.py ]; then
           case $(params.environment) in
 
             dev|develop|development)
