--- a/tekton/kustomization.yaml
+++ b/tekton/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+- config-defaults.yaml
 - tekton-pipelines-v0.27.0.yaml
 - tekton-triggers-v0.15.0.yaml
 - tekton-triggers-interceptors-v0.15.0.yaml
