--- a/tekton-pipelines/kaniko/triggers/build-pipeline-trigger.yaml
+++ b/tekton-pipelines/kaniko/triggers/build-pipeline-trigger.yaml
@@ -122,3 +122,8 @@ spec:
                   fieldPath: metadata.annotations
         nodeSelector:
           ci: "true"
+        tolerations:
+          - key: "ci"
+            operator: "Equal"
+            value: "true"
+            effect: "NoSchedule"
