--- a/tekton-pipelines/buildpacks-dotnet/build-pipeline.yaml
+++ b/tekton-pipelines/buildpacks-dotnet/build-pipeline.yaml
@@ -78,6 +78,8 @@ spec:
       params:
         - name: application
           value: "$(params.application)"
+        - name: branch
+          value: $(params.branch) # this comes from el
         - name: builder_image
           value: "$(params.buildpack_builder_image)"
         - name: run_image
