--- a/tekton-pipelines/buildpacks-dotnet/tasks/build.yaml
+++ b/tekton-pipelines/buildpacks-dotnet/tasks/build.yaml
@@ -103,14 +103,13 @@ spec:
       workingDir: $(resources.inputs.app.path)
       image: gittools/gitversion:5.6.10-alpine.3.12-x64-3.1
       script: |
+        #!/usr/bin/env ash
         git tag
         # so we are making a hack, that if we try to merge hotfix branch into main we should 
         [ -e GitVersion.yml ] && /tools/dotnet-gitversion | grep hotfix 1>/dev/null && (echo "hotfix"; rm -rf GitVersion.yml; cp GitVersion-hotfix.yml GitVersion.yml)
 
-
-        branches="^refs/heads/(main$|release//*)"
-
-        if [[ $(params.branch) =~ $branches ]];
+        # since this is a busybox we can't use bash regexp here
+        if echo $(params.branch) | grep -E '^refs/heads/(main|release/[0-9.]+)$' > /dev/null;
         then
           local_tags=$(git tag --points-at HEAD)
           echo "remove local head tags"
